NetBSD Problem Report #24927

Received: (qmail 21735 invoked by uid 605); 26 Mar 2004 20:06:45 -0000
Message-Id: <20040326200641.26BA819B01@dmath5.geometrie.tuwien.ac.at>
Date: Fri, 26 Mar 2004 21:06:41 +0100 (CET)
From: wiz@NetBSD.org
Sender: gnats-bugs-owner@NetBSD.org
Reply-To: wiz@NetBSD.org
To: gnats-bugs@gnats.netbsd.org
Subject: libcurses: pechochar() missing
X-Send-Pr-Version: 3.95

>Number:         24927
>Category:       lib
>Synopsis:       libcurses: pechochar() missing
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Mar 26 20:07:00 +0000 2004
>Closed-Date:    Mon Apr 05 10:31:12 +0000 2004
>Last-Modified:  Mon Apr 05 10:31:12 +0000 2004
>Originator:     Thomas Klausner
>Release:        NetBSD 1.6ZL
>Organization:

>Environment:


>Description:
Our libcurses does not contain a pechochar() function, though SUSv2 describes it.
>How-To-Repeat:
grep pechochar /usr/include/curse*
or try to build ettercap with native curses.
>Fix:
Implement it :)
>Release-Note:
>Audit-Trail:

From: Julian Coleman <jdc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:  
Subject: pr/24927 CVS commit: src/lib/libcurses
Date: Sun, 28 Mar 2004 08:58:13 +0000 (UTC)

 Module Name:	src
 Committed By:	jdc
 Date:		Sun Mar 28 08:58:13 UTC 2004

 Added Files:
 	src/lib/libcurses: curses_echochar.3 echochar.c

 Log Message:
 Implement *echochar().
 Should fix PR lib/24927.


 To generate a diff of this commit:
 cvs rdiff -r0 -r1.1 src/lib/libcurses/curses_echochar.3 \
     src/lib/libcurses/echochar.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.


From: Julian Coleman <jdc@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:  
Subject: pr/24927 CVS commit: src/lib/libcurses
Date: Sun, 28 Mar 2004 08:58:37 +0000 (UTC)

 Module Name:	src
 Committed By:	jdc
 Date:		Sun Mar 28 08:58:37 UTC 2004

 Modified Files:
 	src/lib/libcurses: Makefile curses.h curses_private.h newwin.c
 	    refresh.c
 	src/lib/libcurses/PSD.doc: fns.doc

 Log Message:
 Changes to support *echochar().
 Should fix PR lib/24927.


 To generate a diff of this commit:
 cvs rdiff -r1.50 -r1.51 src/lib/libcurses/Makefile
 cvs rdiff -r1.85 -r1.86 src/lib/libcurses/curses.h
 cvs rdiff -r1.35 -r1.36 src/lib/libcurses/curses_private.h
 cvs rdiff -r1.41 -r1.42 src/lib/libcurses/newwin.c
 cvs rdiff -r1.58 -r1.59 src/lib/libcurses/refresh.c
 cvs rdiff -r1.34 -r1.35 src/lib/libcurses/PSD.doc/fns.doc

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed 
State-Changed-By: wiz 
State-Changed-When: Mon Apr 5 10:30:39 UTC 2004 
State-Changed-Why:  
ettercap now only fails because of missing putwin(), so I 
assume the fix is good enough for now -- thanks! 
>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.