Changes to support *echochar(). Should fix PR lib/24927.